# jetson-git

./: train.pkl
learn_jetson/: helloworld.py
learn_jetson/FaceRecognizer/: face-recognizer-2.py  face-recognizer-4.py
learn_jetson/Hello_AI_World/DetectNet/: my-detection.py
learn_jetson/Hello_AI_World/ImageNet/image_recognition_python/: my-recognition.py
learn_jetson/Hello_AI_World/image_recognition_c++/: CMakeLists.txt  my-recognition.cpp
learn_jetson/OpenCV/: OpenCV-1.py  OpenCV-2.py  OpenCV-4-dualCams.py  test-usb-camera.py
learn_jetson/learn-opencv/: 3.py  4.py  5.py
python/FaceRecognizer/: face-recognizer-1.py  face-recognizer-3.py
python/learn-opencv/: 1.py  2.py
python/tensorflow/: test.py
